syntax = "proto3";

package grpc;

service GRPCService {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Read (ReadRequest) returns (ReadResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message CreateRequest {
  string name = 1;
  string desc = 2;
}

message CreateResponse {
  int32 id = 1;
}

message ReadRequest {
  int32 id = 1;
}

message ReadResponse {
  string name = 1;
  string desc = 2;
}

message UpdateRequest {
  int32 id = 1;
  string name = 2;
  string desc = 3;
}

message UpdateResponse {}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {}
